--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "compression": "^1.7.4",
     "dotenv": "^16.4.5",
-    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express-basic-auth": "^1.2.1",
     "express": "^4.19.2",
     "helmet": "^7.2.0",
+    "node-fetch": "^2.6.13",
     "ws": "^8.17.1"
   }
 }
