--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "client:dev": "vite",
+    "client:build": "vite build",
+    "client:preview": "vite preview"
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -15,6 +18,17 @@
     "express": "^4.19.2",
     "helmet": "^7.2.0",
     "node-fetch": "^2.6.13",
-    "ws": "^8.17.1"
+    "ws": "^8.17.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.2",
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.2"
   }
 }
